--- a/lunbo/lunbo.html
+++ b/lunbo/lunbo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>lunbo</title>
-    <script src="jquery-2.1.4.js"></script>
+    <script src="../lunbo/jquery-2.1.4.js"></script>
     <script src="lunbo.js"></script>
     <link rel="stylesheet" type="text/css" href="lunbo.css">
   </head>
